动画读取器完成